--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,20 @@
-# OS metadata
+# OS junk
 .DS_Store
+Thumbs.db
 
-# Dependency directories
+# Node dependencies
 node_modules/
+client/node_modules/
+server/node_modules/
 
 # Build output
 dist/
 build/
+client/dist/
+server/dist/
+
+# TypeScript
+*.tsbuildinfo
 
 # Logs
 *.log
@@ -24,3 +32,11 @@ lerna-debug.log*
 # Prisma local database
 server/prisma/dev.db
 server/prisma/dev.db-journal
+
+# Coverage / tooling caches
+.nyc_output/
+coverage/
+
+# IDE metadata
+.idea/
+.vscode/
