--- a/server/.env.example
+++ b/server/.env.example
@@ -7,3 +7,10 @@ CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 
 # Database (Prisma)
 DATABASE_URL="file:./dev.db"
+
+# Auth
+# Strong random string; run `openssl rand -hex 32`
+JWT_SECRET="replace-with-random-hex"
+# Optional overrides
+JWT_EXPIRES_IN="7d"
+RESET_TOKEN_EXPIRY_MINUTES=60
